# EmbeddedSPProject

./: .gitignore  CMakeLists.txt  README.md  main.c  main.h
Posicion/: posicion.c  posicion.h
dyn/: dyn_app_common.c  dyn_app_common.h  dyn_app_sensor.c  dyn_app_sensor.h  dyn_frames.c  dyn_frames.h  dyn_instr.c  dyn_instr.h
dyn_test/: b_queue.c  b_queue.h  dyn_emu.c  movement_simulator.c
hal_dyn_uart/: fake_msp.h  hal_dyn_uart_emu.c  hal_dyn_uart_emu.h
joystick_emu/: joystick.c  joystick.h
src/dyn/: dyn_app_motors.c  dyn_app_motors.h  dyn_app_sensor.c  dyn_app_sensor.h  dyn_frames.c  dyn_frames.h  dyn_instr.c  dyn_instr.h
src/dyn_test/: b_queue.c  b_queue.h  dyn_emu.c  dyn_emu.h  movement_simulator.c  movement_simulator.h
src/hal_dyn_uart/: fake_msp.h  hal_dyn_uart_emu.c  hal_dyn_uart_emu.h
src/joystick_emu/: joystick.c  joystick.h
src/main/: main.c  main.h
src/simulator/: posicion.c  posicion.h
